# grocery

./: .clang-format  .clang-tidy  .gitignore  README.md
asio/coroutine_token/: CMakeLists.txt  conanfile.py
asio/coroutine_token/include/: task.hpp
asio/coroutine_token/src/: CMakeLists.txt  main.cpp
asio/think_async/: CMakeLists.txt  build.sh  conanfile.py  doc.md
asio/think_async/.cache/clangd/index/: main.cpp.FC129AEDFFC26203.idx  step_0.cpp.64ABF6ED8E309712.idx  step_1.cpp.CFCD7ACC8FFE1739.idx  step_2.cpp.5DC1F23FA2887D20.idx  step_3.cpp.2E3E43E0BB7B8C28.idx  step_4.cpp.4C3E382816015B6E.idx  step_5.cpp.9826DC48A0F7CACD.idx
asio/think_async/episode1/: CMakeLists.txt  main.cpp  step_0.cpp  step_1.cpp  step_2.cpp  step_3.cpp  step_4.cpp  step_5.cpp  step_6.cpp  step_7.cpp
asio/think_async/episode2/: CMakeLists.txt  step_0.cpp  step_1.cpp  step_2.cpp  step_3.cpp  step_4.cpp  step_5.cpp  step_6.cpp  step_7.cpp  step_8.cpp
books/c++_templates_2nd/ch22_type_erasue/function/: CMakeLists.txt  CPPLINT.cfg  build.sh  conanfile.py
books/c++_templates_2nd/ch22_type_erasue/function/cmake/: functionCompileFlags.cmake
books/c++_templates_2nd/ch22_type_erasue/function/include/function/: function.hpp
books/c++_templates_2nd/ch22_type_erasue/function/src/: CMakeLists.txt  function.cpp
books/c++_templates_2nd/ch22_type_erasue/function/test/: CMakeLists.txt
books/c++_templates_2nd/ch22_type_erasue/function/test/include/: count_new.h  test_macros.h
books/c++_templates_2nd/ch22_type_erasue/function/test/src/: count_new.cpp
books/c++_templates_2nd/ch22_type_erasue/function/test/unit_test/bad_call/: bad_fuction_call_ctor.cpp  bad_function_call.cpp
books/c++_templates_2nd/ch22_type_erasue/function/test/unit_test/func/: addressof.cpp  invoke.cpp  operator_bool.cpp  swap.cpp
books/c++_templates_2nd/ch22_type_erasue/function/test/unit_test/func/common/: F.cpp  F_assign.cpp  F_incomplete.cpp  F_nullptr.cpp  copy_assign.cpp  copy_move.cpp  default.cpp  nullptr_t.cpp  nullptr_t_assign.cpp  swap.cpp
books/c++_templates_2nd/ch22_type_erasue/include/: function.hpp
books/c++_templates_2nd/ch22_type_erasue/src/: function.cpp
books/functional_programming_in_c++/ch-12/bookmark_service/: CMakeLists.txt  code_check.sh  conanfile.py
books/functional_programming_in_c++/ch-12/bookmark_service/cmake/: findAllTarget.cmake
books/functional_programming_in_c++/ch-12/bookmark_service/include/bookmark_service/: actor.hpp  bookmark_service.hpp  expected.hpp  filter.hpp  join.hpp  mtry.h  receiver.hpp  service.hpp  session.hpp  transform.hpp  trim.hpp  value.hpp
books/functional_programming_in_c++/ch-12/bookmark_service/include/bookmark_service/expect/: bad_expected_access.hpp  expected.hpp
books/functional_programming_in_c++/ch-12/bookmark_service/src/: CMakeLists.txt  bookmark_service.cpp  main.cpp
books/functional_programming_in_c++/ch-12/bookmark_service/test/: CMakeLists.txt  test_main.cpp
books/functional_programming_in_c++/ch-12/bookmark_service/test/unit_test/: test_bookmark_service.cpp
books/functional_programming_in_c++/excetion_toy/: CMakeLists.txt
books/functional_programming_in_c++/excetion_toy/include/execution/: execution.hpp  thread.hpp  util.hpp
books/functional_programming_in_c++/excetion_toy/src/: sync_test.cpp  thread_test.cpp
books/hands-on-design-pattern-with-cpp/ch4/: non-member-swap_std.cpp  std_swap_copyable.cpp  std_swap_movable.cpp  std_swap_non-copyable.cpp  std_swap_non_movable.cpp  vector_empty.cpp
books/hands-on-design-pattern-with-cpp/ch4-swap/: std_swap_non-copyable.cpp  std_swap_non_movable.cpp  swap_rollback.cpp  vector_empty.cpp
books/hands-on-design-pattern-with-cpp/ch5/: function_call.cpp  not_equal.cpp  not_equal_friend.cpp  vistor.cpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/: smartptr.cpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/: CMakeLists.txt  any.cpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/example/: CMakeLists.txt  foo.cpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/include/: any.hpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/include/any/: any.hpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/include/any/traits/: aligned_storage.hpp  nat.hpp  type_list.hpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/include/traits/: aligned_storage.hpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/src/: CMakeLists.txt  any.cpp
books/hands-on-design-pattern-with-cpp/ch6-type erasue/any/test/include/: any_helper.h
books/hands-on-design-pattern-with-cpp/ch6-type erasue/smartptr/: CMakeLists.txt  smartptr.cpp
books/hands-on-design-pattern-with-cpp/ch8-CRTP/: function_call.cpp  registry.cpp
coroutine/: custom_coroutine.cpp  test.cpp  transform_lowering.cpp
coroutine/coro-basic/: custom_coroutine.cpp  symmetric.cpp  test.cpp  transform_lowering.cpp
coroutine/cppcoro/: README.md
coroutine/cppcoro/include/cppcoro/: broken_promise.hpp  stddef.hpp  task.hpp
coroutine/cppcoro/include/cppcoro/detail/traits/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  remove_rvalue_reference.hpp
coroutine/cppcoro/include/cppcoro/traits/: await_traits.hpp
coroutine/example/multi-threads/: main.cpp  scheduler.hpp
coroutine/example/single-thread/: main.cpp  scheduler.hpp
type erasure/: circle.hpp  ext-poly _1.cpp  ext-poly.cpp  ext-poly_2.cpp  ext-poly_3.cpp  rectangle.hpp  square.hpp
utility/circular buffer/: CMakeLists.txt  doc.md
utility/circular buffer/include/: fifo1.hpp  fifo2.hpp  fifo3.hpp  fifo4.hpp
utility/circular buffer/test/: CMakeLists.txt  fifo2.cpp  fifo3.cpp  fifo4.cpp
utility/circular buffer/test/include/benchmark/: bench.hpp  fifo1.cpp
